@@ -1,3 +1,9 @@
+[B]Version 1.7.2[/B]
+
+- Updated: pornotube (catcher still broken)
+- Fixed: search
+
+
 [B]Version 1.7.1[/B]
 
 - Added: madthumbs and pornoxo
